wording: replace ‘see’ and ‘show’ with ‘print’ (#4)

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-See the names and codepoints of unicode characters.
+Print the codepoints and names of unicode characters.
 
 ./runes.py … °
 echo é ☂ | ./runes.py
